--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -22,7 +22,7 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
-          
+
     steps:
     - uses: actions/checkout@v4
 
@@ -35,7 +35,7 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install
 
     - name: Generate App Key
       run: php artisan key:generate
@@ -49,7 +49,7 @@ jobs:
         until mysqladmin ping -h"127.0.0.1" --silent; do
           sleep 1
         done
-        
+
     - name: Run Database Migrations
       env:
         DB_CONNECTION: mysql
@@ -62,4 +62,4 @@ jobs:
 
     - name: Run Feature & Unit Tests
       run: php artisan test
-      
+
