--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -63,3 +63,10 @@ jobs:
     - name: Run Feature & Unit Tests
       run: php artisan test
 
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@v2.2.0
+      with:
+        projectBaseDir: .
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
