--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -76,4 +76,17 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+    - name: Deploy to Production Server
+      if: success()
+      uses: appleboy/ssh-action@v0.1.6
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        script: |
+          cd /home/aryaashari100/financial_report_devops
+          git pull origin test-ci
+          php artisan config:cache
+          php artisan route:cache
+
 
