--- a/deploy/php/Dockerfile
+++ b/deploy/php/Dockerfile
@@ -9,8 +9,11 @@ RUN apt-get update && apt-get install -y \
     unzip \
     git \
     curl \
+    libzip-dev \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install pdo pdo_mysql gd
+    && docker-php-ext-configure zip \ 
+    && docker-php-ext-install pdo pdo_mysql gd zip
+
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
