--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,16 @@
 version: '3.8'
 
 services:
-  nginx:
-    image: nginx:latest
-    container_name: laravel_nginx
-    ports:
-      - "8080:80"
-    volumes:
-      - .:/var/www/html
-      - ./deploy/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - php
-      - mysql
-    networks:
-      - laravel-network
-
   php:
     build:
       context: .
-      dockerfile: deploy/php/Dockerfile
+      dockerfile: Dockerfile
+    network_mode: "host"
     container_name: financial_report
     volumes:
       - .:/var/www/html
-    depends_on:
-      - mysql
-    networks:
-      - laravel-network
     command: >
       sh -c "php artisan key:generate --force &&
             php artisan migrate --force &&
-            php artisan serve --host=0.0.0.0 --port=8000"
-    ports:
-      - 8000:8000
+            php artisan serve --host=0.0.0.0 --port=9000"
 
-  mysql:
-    image: mysql:8.0
-    container_name: laravel_mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: financial_report_db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./deploy/mysql/my.cnf:/etc/mysql/my.cnf
-    networks:
-      - laravel-network
-
-volumes:
-  mysql_data:
-
-networks:
-  laravel-network:
-    driver: bridge
