--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -83,6 +83,31 @@ jobs:
         script: |
           cd /home/aryaashari100/financial_report_devops
           git pull origin main
-          docker compose up -d --build
+          
+  docker-deploy:
+    needs: laravel-tests
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Build and push Laravel image
+      uses: docker/build-push-action@v5
+      with:
+    	context: ./app
+    	push: true
+    	tags: ${{ secrets.DOCKER_USERNAME }}/financial-report:latest
+
+    - name: Build and push NGINX image
+      uses: docker/build-push-action@v5
+      with:
+    	context: ./nginx
+    	push: true
+    	tags: ${{ secrets.DOCKER_USERNAME }}/financial-report-nginx:latest
+          
 
 
