--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: Laravel CI/CD
 
 on:
   push:
@@ -24,90 +24,90 @@ jobs:
           --health-retries=3
 
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    - uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-        extensions: mbstring, bcmath, mysql
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: mbstring, bcmath, mysql
 
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-    - name: Install Dependencies
-      run: composer install
+      - name: Install Dependencies
+        run: composer install
 
-    - name: Generate App Key
-      run: php artisan key:generate
+      - name: Generate App Key
+        run: php artisan key:generate
 
-    - name: Set Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+      - name: Set Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
 
-    - name: Wait for MySQL
-      run: |
-        sudo apt-get install -y mysql-client
-        until mysqladmin ping -h"127.0.0.1" --silent; do
-          sleep 1
-        done
+      - name: Wait for MySQL
+        run: |
+          sudo apt-get install -y mysql-client
+          until mysqladmin ping -h "127.0.0.1" --silent; do
+            sleep 1
+          done
 
-    - name: Run Database Migrations
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: laravel_test
-        DB_USERNAME: laravel
-        DB_PASSWORD: secret
-      run: php artisan migrate --force
+      - name: Run Database Migrations
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: laravel_test
+          DB_USERNAME: laravel
+          DB_PASSWORD: secret
+        run: php artisan migrate --force
 
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@v2.2.0
-      with:
-        projectBaseDir: .
-        args: >
-          -Dsonar.projectKey=Aryaashari_financial_report_devops
-          -Dsonar.organization=aryaashari
-          -Dsonar.sources=app
-          -Dsonar.tests=tests
-          -Dsonar.php.coverage.reportPaths=storage/coverage.xml
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2.2.0
+        with:
+          projectBaseDir: .
+          args: >
+            -Dsonar.projectKey=Aryaashari_financial_report_devops
+            -Dsonar.organization=aryaashari
+            -Dsonar.sources=app
+            -Dsonar.tests=tests
+            -Dsonar.php.coverage.reportPaths=storage/coverage.xml
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    - name: Deploy to Production Server
-      if: success()
-      uses: appleboy/ssh-action@v0.1.6
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
-          cd /home/aryaashari100/financial_report_devops
-          git pull origin main
-          
+      - name: Deploy to Production Server
+        if: success()
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd /home/aryaashari100/financial_report_devops
+            git pull origin main
+
   docker-deploy:
     needs: laravel-tests
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    - name: Build and push Laravel image
-      uses: docker/build-push-action@v5
-      with:
-    	#context: ./app
-    	push: true
-    	tags: ${{ secrets.DOCKER_USERNAME }}/financial-report:latest
+      - name: Build and Push Laravel Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./app
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/financial-report:latest
 
-    - name: Build and push NGINX image
-      uses: docker/build-push-action@v5
-      with:
-    	#context: ./nginx
-    	push: true
-    	tags: ${{ secrets.DOCKER_USERNAME }}/financial-report-nginx:latest
-          
-
+      - name: Build and Push NGINX Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./nginx
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/financial-report-nginx:latest
 
